# filterfs

./: Cargo.toml  LICENSE  README.md
src/: args.rs  fhman.rs  filter.rs  filterfs.rs  id.rs  inoman.rs  lib.rs  main.rs  pattern.rs  utils.rs
src/filterfs/: mod.rs  tests.rs
