[package]
name = "filterfs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
fuser = "0.17.0"
glob = "0.3.3"
libc = "0.2.183"
log = "0.4.29"
nix = { version = "0.31.2", features = ["fs", "process"] }

[dev-dependencies]
simple_logger = "5.2.0"
tempfile = "3.27.0"
