[package]
name = "filterfs"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11.9"
fuser = "0.17"
glob = "0.3"
libc = "0.2"
log = "0.4"
nix = { version = "0.31", features = ["fs", "process"] }

[dev-dependencies]
simple_logger = "5.2"
tempfile = "3.27"
